fix tabs content align

--- a/css/style.css
+++ b/css/style.css
@@ -668,18 +668,6 @@ video {
   z-index: 20;
 }
 
-.order-3{
-  order: 3;
-}
-
-.order-2{
-  order: 2;
-}
-
-.order-1{
-  order: 1;
-}
-
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -735,20 +723,20 @@ video {
   margin-left: 1.5rem;
 }
 
-.mb-24{
-  margin-bottom: 6rem;
-}
-
-.ml-8{
-  margin-left: 2rem;
+.mb-12{
+  margin-bottom: 3rem;
 }
 
 .mb-3{
   margin-bottom: 0.75rem;
 }
 
-.mb-48{
-  margin-bottom: 12rem;
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
+.mb-24{
+  margin-bottom: 6rem;
 }
 
 .mb-16{
@@ -759,16 +747,12 @@ video {
   margin-bottom: 5rem;
 }
 
+.mb-48{
+  margin-bottom: 12rem;
+}
+
 .mb-7{
   margin-bottom: 1.75rem;
-}
-
-.mb-12{
-  margin-bottom: 3rem;
-}
-
-.mb-6{
-  margin-bottom: 1.5rem;
 }
 
 .block{
@@ -817,14 +801,6 @@ video {
 
 .w-16{
   width: 4rem;
-}
-
-.w-2\/5{
-  width: 40%;
-}
-
-.w-1\/5{
-  width: 20%;
 }
 
 .w-\[200\%\]{
@@ -1025,10 +1001,6 @@ video {
   border-right-width: 1px;
 }
 
-.border-l{
-  border-left-width: 1px;
-}
-
 .border-t{
   border-top-width: 1px;
 }
@@ -1166,34 +1138,14 @@ video {
   padding-right: 2rem;
 }
 
-.py-14{
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .px-16{
   padding-left: 4rem;
   padding-right: 4rem;
-}
-
-.py-12{
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
-.py-16{
-  padding-top: 4rem;
-  padding-bottom: 4rem;
-}
-
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 
 .pt-8{
@@ -1216,14 +1168,6 @@ video {
   padding-top: 2.5rem;
 }
 
-.pr-16{
-  padding-right: 4rem;
-}
-
-.pl-16{
-  padding-left: 4rem;
-}
-
 .pt-40{
   padding-top: 10rem;
 }
@@ -1234,14 +1178,6 @@ video {
 
 .pt-16{
   padding-top: 4rem;
-}
-
-.pr-10{
-  padding-right: 2.5rem;
-}
-
-.pl-10{
-  padding-left: 2.5rem;
 }
 
 .text-center{
@@ -1715,8 +1651,8 @@ video {
     flex-direction: row;
   }
 
-  .md\:items-center{
-    align-items: center;
+  .md\:items-start{
+    align-items: flex-start;
   }
 
   .md\:justify-between{
@@ -1787,12 +1723,12 @@ video {
     margin-bottom: 0px;
   }
 
-  .lg\:ml-8{
-    margin-left: 2rem;
-  }
-
   .lg\:mb-24{
     margin-bottom: 6rem;
+  }
+
+  .lg\:ml-8{
+    margin-left: 2rem;
   }
 
   .lg\:mb-48{
@@ -1887,20 +1823,20 @@ video {
          column-gap: 4rem;
   }
 
-  .lg\:border-l{
-    border-left-width: 1px;
-  }
-
-  .lg\:border-r{
-    border-right-width: 1px;
-  }
-
   .lg\:border-t-0{
     border-top-width: 0px;
   }
 
   .lg\:border-b-0{
     border-bottom-width: 0px;
+  }
+
+  .lg\:border-l{
+    border-left-width: 1px;
+  }
+
+  .lg\:border-r{
+    border-right-width: 1px;
   }
 
   .lg\:py-12{
@@ -1958,10 +1894,6 @@ video {
 
   .xl\:w-\[700px\]{
     width: 700px;
-  }
-
-  .xl\:w-2\/5{
-    width: 40%;
   }
 
   .xl\:bg-\[url\(\'\/img\/hand\.png\'\)\]{
